# YellowBox

./: .gitignore  README.md  package.json  skills-lock.json  vite.config.js
.github/workflows/: ci.yml  release.yml
scripts/: setup-ffmpeg.js
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  memories.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/json/: memories_history.json
src-tauri/src/: combiner.rs  commands.rs  db.rs  downloader.rs  error.rs  extractor.rs  fs.rs  lib.rs  main.rs  metadata.rs  models.rs  models_tests.rs  parser.rs  pipeline.rs  thumbnailer.rs
src-tauri/src/infra/: event_emitter.rs  mod.rs  zip_access.rs
src-tauri/src/pipeline/: acquire.rs  combine.rs  extract.rs  metadata_stage.rs  mod.rs  process.rs  types.rs  update_sink.rs  zip.rs
src-tauri/src/services/: mod.rs  pipeline_orchestrator.rs  session.rs
src-tauri/tests/: db_test.rs  e2e_mydata_test.rs  error_test.rs  metadata_test.rs  models_test.rs  pipeline_test.rs  session_export_paths_test.rs
src/lib/: config.svelte.ts  parser.ts  session.svelte.ts  state-labels.ts
src/lib/components/: AboutPanel.svelte  DataRequestGuide.svelte  Header.svelte  MemoryCard.svelte  MemoryGrid.svelte  ProcessingView.svelte  SettingsPanel.svelte  SetupCard.svelte  StatsPanel.svelte  StatusTracker.svelte  ThemeToggle.svelte
src/lib/components/ui/button/: button.svelte
src/lib/services/: tauri.ts
src/routes/: +layout.svelte  +page.svelte
