[package]
name = "yellowbox"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yellowbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
directories = "5"
tauri = { version = "2", features = ["protocol-asset", "test"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
chrono = "0.4"
filetime = "0.2"
rusqlite = { version = "0.37", features = ["bundled"] }
zip = "2.2"
image = "0.25"
walkdir = "2.5"
thiserror = "2.0.18"
strum = "0.28.0"
strum_macros = "0.28.0"
num_cpus = "1.17.0"
little_exif = "0.6.23"
tokio-rusqlite = "0.7.0"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.26.0"
url = "2.5"
